Fix language switch height on mobile

--- a/cs_CZ/assets/stylesheets/application.css
+++ b/cs_CZ/assets/stylesheets/application.css
@@ -8688,7 +8688,8 @@ input[type="color"]:focus,
   top: 8px;
   right: 20px; }
   .language-switch img {
-    width: 40px; }
+    width: 40px;
+    height: auto; }
 
 .clearfix {
   *zoom: 1; }
